[project]
name = "state_search_be"
version = "0.1.0"
description = ""
authors = [{ name = "timechess", email = "tyc221@ruc.edu.cn" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "grpcio>=1.69.0,<2",
    "grpcio-tools>=1.69.0,<2",
    "jsonlines>=4.0.0,<5",
    "prisma>=0.15.0,<0.16",
    "protobuf>=5.29.3,<6",
    "python-dotenv>=1.0.0,<2",
    "sentence-transformers>=3.3.1,<4",
    "qdrant-client>=1.17.0,<2",
    "torch>=2.7,<3",
]

[tool.hatch.build.targets.sdist]
include = [
    "state_search_be",
    "state_search_be/state_search",
]

[tool.hatch.build.targets.wheel]
include = [
    "state_search_be",
    "state_search_be/state_search",
]

[tool.hatch.build.targets.wheel.sources]
"state_search_be/state_search" = "state_search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["tests/", "**/__pycache__/", ".venv/", "dist/", "state_search"]
